---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/operator/add_bool_string.lox
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
InvalidBinaryOp { lhs: Bool(true), op: BinOp { kind: Plus, token: Token { kind: Plus, loc: craftinginterpreters/test/operator/add_bool_string.lox:5..6 } }, rhs: String("s"), at: Binary { lhs: Literal(Literal { kind: True, token: Token { kind: True, loc: craftinginterpreters/test/operator/add_bool_string.lox:0..4 } }), op: BinOp { kind: Plus, token: Token { kind: Plus, loc: craftinginterpreters/test/operator/add_bool_string.lox:5..6 } }, rhs: Literal(Literal { kind: String("s"), token: Token { kind: String, loc: craftinginterpreters/test/operator/add_bool_string.lox:7..10 } }) } }
